--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-ip": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.2.10"
+    "mongoose": "^5.2.10",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
